[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-packet-analyzer"
version = "1.0.0"
description = "AI-powered network packet analyzer: detects C2, exfiltration, and lateral movement from pcap or tcpdump output."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-packet-analyzer = "ai_packet_analyzer.main:cli"

[tool.setuptools.packages.find]
include = ["ai_packet_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
